<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="hello">Hello World, LeisureLife!</string>
    <string name="app_name">休闲生活</string>
    <string name="infro">本版权归北大青鸟集团所有</string>
    <string name="copyright">Copyright@2010-2015 aptech All Right Reserved</string>
    <string name="back">返回</string>
    <!-- register -->
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="input_username">输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ok">确定</string>
    <string name="submit">提交</string>
    <string name="donotregister">您确定不注册 <xliff:g>%1$s</xliff:g> 吗？</string>
    <string name="reg_error">用户名和密码不能为空！</string>
    <string name="reg_fail">注册失败！</string>
    <string name="registering">正在注册,请稍候……</string>
    <string name="login_cancel_tips">确定不登陆吗?</string>
    <string name="logining">正在登陆,请稍后……</string>
    <string name="login_fail">登陆失败!</string>
    <string name="up_error">用户名或密码错误!</string>
    <string name="login_remeberpw">记住密码</string>
    <string name="login_autologin">自动登录</string>

    <!-- tabmain -->
    <string name="home">活动</string>
    <string name="recommend">推荐</string>
    <string name="collection">收藏</string>
    <string name="more">更多</string>
    <string name="recommend_numis">号码 ：</string>
    <string name="send_success">分享成功！</string>
    <string name="send_empty">请正确输入！</string>
    <string name="data_loading">数据加载中，请稍候……</string>
    <string name="nodata">暂无数据</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="exit">退出</string>
    <string name="exit_ask">确定要退出吗？</string>
    <!-- gloable -->
    <string name="seemore">查看更多...</string>
    <string name="nameis">名称:</string>
    <string name="addris">地址:</string>
    <string name="timeis">时间:</string>
    <string name="typeis">类型:</string>
    <string name="playeris">演员:</string>
    <string name="playtimeis">上映时间:</string>
    <string name="labelis">标签:</string>
    <string name="avgis">人均:</string>
    <string name="send">发送</string>
    <string name="feedback_hint">请输入要反馈的内容！</string>
    <string name="input_recommend_content">请输入要推荐的内容！</string>
    <string name="collection_success">收藏成功!</string>
    <string name="collection_fail">收藏失败!</string>
    <string name="_content">内容</string>
    <string name="seleteop">请选择:</string>
    <string name="delete">删除</string>
    <string name="deleteall">删除全部</string>
    <string name="delete_success">删除成功!</string>
    <string name="delete_faill">删除失败!</string>
    <string name="networkunreachable">网络无法连接，请检查网络设置！</string>
    
    <!-- 找美食 --> 
    <string name="finddelicacies">找美食</string>
    <string name="delicaciesdetail">美食详情</string>
    <string name="food_name">菜名:</string>
    <string name="food_oldprice">原价:</string>
    <string name="food_newprice">现价:</string>
    <!-- 看展览 -->
    <string name="display">看展览</string>
    <string name="display_1">展览</string>
    <string name="displaydesc">展览介绍:</string>
    <!-- 电影 -->
    <string name="moviedetail">电影详情</string>
    <string name="watchmovie">看电影</string>
    <string name="movie">电影</string>
    <string name="moviedesc">电影介绍:</string>
    <!-- menu -->
    <string name="previous">上一个</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="next">下一个</string>
    
    <!-- 演出 -->
    <string name="concert">演唱会</string>
    <string name="seeshow">看演出</string>
    <string name="music">音乐会</string>
    <string name="pko">戏曲</string>
    <string name="play">话剧</string>
    <string name="priceis">票价:</string>
    <string name="show">演出</string>
    <string name="showdesc">演出介绍:</string>
    <!-- comment -->
    <string name="publish">发表</string>
    <string name="comment_content_hint">请输入评论内容！</string>
    <string name="comment_args_illegal">程序异常,无法发送评论！</string>
    <string name="sendsuccess">发送成功！</string>

    <!-- map -->
    <string name="map_permission_error">授权错误,错误码:</string>
    <string name="map_permission_fail">授权失败！</string>
    <string name="map_netstate_error">网络错误,错误码:</string>
    <string name="map_netstate_data">输入正确的检索条件！</string>
    <string name="map_init_error">初始化地图错误！</string>
    <string name="searching">正在搜索,请稍候……</string>
    <string name="locating">正在定位!</string>
    <string name="differenttcity">不同城市间,无法查询公交换乘！</string>
    <string name="search_fail">搜索失败！</string>
    <string name="cannottransit">距离太远,无法进行公交换乘!</string>
    <string name="norightposition">未能获得正确位置！</string>
    <string name="locatesuccess">定位成功</string>
    
    <!-- help -->
    <string name="get_res_err">获得资源错误</string>    
</resources>