<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/tab_bg1"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/menu_previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/menu_item_selector"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/btn_menu_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/prev" />

        <TextView
            android:id="@+id/tv_menu_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/previous"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/menu_item_selector"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/btn_menu_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/comment" />

        <TextView
            android:id="@+id/tv_menu_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/comment"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/menu_item_selector"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/btn_menu_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/share" />

        <TextView
            android:id="@+id/tv_menu_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/share"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/menu_item_selector"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/btn_menu_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/save" />

        <TextView
            android:id="@+id/tv_menu_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/collection"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/menu_item_selector"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/btn_menu_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/tv_menu_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>